--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
+.DS_Store
 .gradle
-build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
+.idea
+.classpath
+.project
+.settings
+.yardoc
+.yardopts
+bin
+/build
+target
+out
+*.iml
+*.ipr
+*.iws
+test-output
+Scratch.java
+ScratchTest.java
+test-results
+test-tmp
+*.class
+mods
+.jruby
+.sass-cache
+vertx_classpath.txt
