--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-import java.text.SimpleDateFormat
+group = 'com.github.bangroot.vertx'
 
 buildscript {
   repositories {
@@ -16,8 +16,7 @@ apply plugin: 'groovy'
 apply plugin: "jacoco"
 apply plugin: "maven"
 apply plugin: "maven-publish"
-apply plugin: 'com.jfrog.bintray'
-apply plugin: "com.jfrog.artifactory"
+apply from: 'gradle/wrapper.gradle'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -38,7 +37,7 @@ conf2ScopeMappings.addMapping(0, configurations.provided, Conf2ScopeMappingConta
 // In this section you declare the dependencies for your production and test code
 dependencies {
   // We use the latest groovy 2.x version for building this library
-  provided 'org.codehaus.groovy:groovy:2.1.5'
+  provided 'org.codehaus.groovy:groovy-all:2.1.5'
   provided "io.vertx:vertx-core:2.1.2"
   provided "io.vertx:vertx-platform:2.1.2"
   provided "io.vertx:lang-groovy:2.1.0-final@jar"
@@ -79,95 +78,5 @@ artifacts {
   published javadocJar
 }
 
-def globalVersion = new Version(currentVersion)
-
-group = 'com.github.bangroot.vertx'
-version = globalVersion
-status = version.status
-
-bintray {
-  apiUrl = "https://api.bintray.com"
-  user = bintray_user
-  key = bintray_key
-  configurations = ['published', 'archives']
-//  publications = ['published']
-//  filesSpec {
-//    from 'files'
-//    into 'standalone_files/level1'
-//    rename '(.+)\\.(.+)', '$1-suffix.$2'
-//  }
-  publish = false
-  pkg {
-    repo = 'maven'
-    name = project.name
-    desc = 'Utility Classes for Vert.x Development'
-    websiteUrl = 'https://github.com/bangroot/vertx-utils'
-    issueTrackerUrl = 'https://github.com/bangroot/vertx-utils/issues'
-    vcsUrl = 'https://github.com/bangroot/vertx-utils.git'
-    licenses = ['Apache-2.0']
-    labels = ['vertx', 'groovy']
-    attributes = ['plat': ['linux', 'osx']]
-    publicDownloadNumbers = true
-    version {
-      name = '1.0' //Optional logical version name
-//      desc = 'optional, version-specific description'
-      vcsTag = '1.0'
-//      attributes= ['a': ['ay1', 'ay2', 'ay3'], 'b': ['bee'], c: 'cee']
-    }
-  }
-}
-
-artifactory {
-  contextUrl = "https://oss.jfrog.org"
-  publish {
-    repository {
-      repoKey = 'oss-snapshot-local'
-      username = bintray_user
-      password = bintray_key
-    }
-  }
-}
-
-artifactoryPublish {
-  publications('published')
-}
-
-class Version {
-  String originalVersion
-  String thisVersion
-  String status
-  Date buildTime
-
-  Version(String versionValue) {
-    buildTime = new Date()
-    originalVersion = versionValue
-    if (originalVersion.endsWith('-SNAPSHOT')) {
-      status = 'integration'
-      thisVersion = originalVersion.substring(0, originalVersion.length() - 'SNAPSHOT'.length()) + getTimestamp()
-    } else {
-      status = 'release'
-      thisVersion = versionValue
-    }
-  }
-
-  String getTimestamp() {
-    // Convert local file timestamp to UTC
-    def format = new SimpleDateFormat('yyyyMMddHHmmss')
-    format.setCalendar(Calendar.getInstance(TimeZone.getTimeZone('UTC')));
-    return format.format(buildTime)
-  }
-
-  String toString() {
-    thisVersion
-  }
-}
-
-task wrapper(type: Wrapper) {
-  gradleVersion = '2.2.1'
-}
-
-task mappings << {
-  conf2ScopeMappings.mappings.each { key, value ->
-    println "$key: $value.scope"
-  }
-}
+apply from: 'gradle/bintray.gradle'
+apply from: 'gradle/artifactory.gradle'
