--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,21 @@ dependencies {
   provided "io.vertx:lang-groovy:2.1.0-final@jar"
   // We use the awesome Spock testing and specification framework
   testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
-  testCompile 'junit:junit:4.11'
+  testCompile 'cglib:cglib-nodep:3.1'
+  testCompile 'org.objenesis:objenesis:2.1'
+}
+
+sourceSets {
+  test {
+    resources {
+      srcDir 'src/main/jar'
+    }
+  }
 }
 
 jar {
   metaInf {
-    from("src/main/jar") {
+    from("src/main/jar/META-INF") {
       include "**/*.*"
     }
   }
