--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,8 @@ conf2ScopeMappings.addMapping(0, configurations.provided, Conf2ScopeMappingConta
 dependencies {
   // We use the latest groovy 2.x version for building this library
   provided 'org.codehaus.groovy:groovy-all:2.1.5'
-  provided "io.vertx:vertx-core:2.1.2"
-  provided "io.vertx:vertx-platform:2.1.2"
-  provided "io.vertx:lang-groovy:2.1.0-final@jar"
+  provided "io.vertx:vertx-core:3.0.0-dev_preview1"
+  provided "io.vertx:vertx-lang-groovy:3.0.0-dev_preview1"
   // We use the awesome Spock testing and specification framework
   testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
   testCompile 'cglib:cglib-nodep:3.1'
